ingress-gateway-no-tls-termination/virtual-service-tls.yaml
# File virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking
spec:
  hosts:
  - booking.example.com
  gateways:
  - booking-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - booking.example.com
    route:
    - destination:
        host: booking-service
        port:
          number: 443
