ingress-gateway-no-tls-termination/virtual-service.yaml
# File virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking
spec:
  hosts:
  - booking.example.com
  gateways:
  - booking-gateway
  http:
  - route:
    - destination:
        port:
          number: 443
        host: booking-service
